# agentalpha

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  Procfile  README.md  SKILL.md  anchor_lib.rs  api-spec.json  package-lock.json  package.json  railway.json  tsconfig.json
docs/: QUICKSTART.md
examples/: e2e-test.ts  register-scampi.ts  submit-signal.ts
examples/consumer/: index.ts
examples/onchain-demo/: index.ts  query-providers.ts
examples/provider/: index.ts
examples/simple-provider/: submit-signal.ts
frontend/: dashboard.html  index.html  server.js
programs/agentalpha/: Cargo.toml
programs/agentalpha/src/: lib.rs
programs/agentalpha_anchor/: lib.rs
src/: agentalpha.json  agentdex-executor.ts  api.ts  demo-api.ts  hash-api.ts  index.ts  onchain-sync.ts  onchain.ts  registry.ts  reputation.ts  signal-api.ts  types.ts  x402-solana.ts
src/idl/: agentalpha.json
