[package]
name = "agentalpha"
version = "0.1.0"
description = "AgentAlpha - Signal Marketplace for AI Agents"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "agentalpha"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
sha2 = "0.10"
